--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,26 @@
   text-align: center;
 }
 
+.App-logo-on {
+  height: 15vmin;
+  pointer-events: none;
+  animation: App-logo-spin infinite 20s linear;
+}
+
+.App-logo-off {
+  height: 15vmin;
+  pointer-events: none;
+}
+
 
 .App-header {
   background-color: #282c34;
-  min-height: 15vh;
+  min-height: 28vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(5px + 2vmin);
   color: white;
 }
 
@@ -18,3 +29,11 @@
   color: #61dafb;
 }
 
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
